2015-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): WEB2C_KPSE_VERSION => WEB2CVERSION.
	* dirutil.[ch], getdestdir.h, mktexupd.h: Add W32TeX Copyright.
	* getdestdir.c, mktexfmt.c, mktexlsr.c, mktexmf.c, mktexupd.c,
	mktexupdmain.c: Sync with W32TeX.
	* mktexpk.c, mktextfm.c: Sync with W32TeX.
	Use KPSEVERSION and WEB2CVERSION instead of WEB2C_KPSE_VERSION.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (bin_PROGRAMS): Drop fmtutil, now a perl script.
	* fmtutil.c: Removed.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace the deprecated
	spawnvp() by _spawnvp(), they differ for 64-bit MinGW.

2012-12-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* getdestdir.c: Correct return value of getdestdir().

2012-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dirutil.c: Use stat in int is_dir ().
	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Install texhash.exe as copy of mktexlsr.exe.

2012-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace P_WAIT by _P_WAIT.

2012-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Define WEB2C_KPSE_VERSION.
	* mktexpk.c, mktextfm.c: Drop WINWEB2CVERSION, WINKPSEVERSION,
	use WEB2C_KPSE_VERSION with versions from configure.

2011-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil.c: Add parens around assignment used as truth value.

2011-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil.c: Return zero or one (Errorcnt could be 256).

2011-08-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* fmtutil.c: return a nonzero value if it fails to make a format.

2011-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getdestdir.c, mktexmf.c, mktexpk.c, mktextfm.c, mktexupd.c,
	mktexupdmain.c: No need to #include any standard headers, they
	all come through <kpathsea/kpathsea.h>.